Commands and warnings can be pushed to the cli.

--- a/src/style.scss
+++ b/src/style.scss
@@ -33,9 +33,11 @@ html, body {
   white-space: pre;
 }
 
+.cli-history--record {
+}
+
 .cli-history--warning {
   color: #ff5353;
-  padding-left: 10px;
 }
 
 .cli-input {
