The CLI evalutates arithmetic.

--- a/src/style.scss
+++ b/src/style.scss
@@ -36,6 +36,10 @@ html, body {
 .cli-history--record {
 }
 
+.cli-history--output {
+  color: #777777;
+}
+
 .cli-history--warning {
   color: #ff5353;
 }
