--- a/src/style.scss
+++ b/src/style.scss
@@ -17,6 +17,7 @@ html, body {
   background-color: #efefef;
   font-family: "Courier New", monospace;
   padding: 5px;
+  white-space: pre;
 }
 
 .cli-container {
