--- a/src/style.scss
+++ b/src/style.scss
@@ -16,6 +16,7 @@ html, body {
 .code-container {
   background-color: #efefef;
   font-family: "Courier New", monospace;
+  overflow: scroll;
   padding: 5px;
   white-space: pre;
 }
