--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
-    height: 100%;
 }
 
 .app {
@@ -18,10 +18,11 @@ html, body {
 
 .output {
     border: 2px solid #aaa;
-    height: 200px;
-    overflow: scroll;
     display: flex;
     flex-direction: column;
+    height: 200px;
+    overflow: scroll;
+    padding: .5rem .75rem;
 }
 
 .output-text {
@@ -29,5 +30,5 @@ html, body {
 }
 
 .input {
-    padding: 5px 3px;
+    padding: .5rem .75rem;
 }
