--- a/public/style.css
+++ b/public/style.css
@@ -11,14 +11,17 @@ html, body {
 }
 
 .svg {
+    background-color: #212833;
     flex-grow: 1;
-    width: 100%;
     height: 100%;
     transform: scaleY(-1);
+    width: 100%;
 }
 
 .output {
-    border: 2px solid #aaa;
+    color: #5e6064;
+    background-color: #bdbfc3;
+    border-top: 2px solid #aaa;
     display: flex;
     flex-direction: column;
     height: 200px;
@@ -32,6 +35,14 @@ html, body {
 }
 
 .input {
+    color: #5e6064;
+    background-color: #e1e2e5;
+    font-family: "Courier New", monospace;
+    font-weight: 700;
     padding: .5rem .75rem;
     width: 100%;
+}
+
+.input:focus {
+    outline: 0;
 }
