--- a/public/style.css
+++ b/public/style.css
@@ -10,11 +10,32 @@ html, body {
     height: 100%;
 }
 
+.svg-container {
+    flex-grow: 1;
+    position: relative;
+}
+
 .svg {
     background-color: #212833;
-    flex-grow: 1;
+    cursor: none;
     height: 100%;
     transform: scaleY(-1);
+    width: 100%;
+}
+
+.cursor-x {
+    background-color: #fff;
+    cursor: none;
+    position: absolute;
+    height: 100%;
+    width: 1px;
+}
+
+.cursor-y {
+    background-color: #fff;
+    cursor: none;
+    position: absolute;
+    height: 1px;
     width: 100%;
 }
 
