Cursors don't generate click events. Moved bits around to make a little more sense.

--- a/public/style.css
+++ b/public/style.css
@@ -23,18 +23,19 @@ html, body {
     width: 100%;
 }
 
-.cursor-x {
+.cursor-x, .cursor-y {
     background-color: #fff;
     cursor: none;
+    pointer-events: none;
     position: absolute;
+}
+
+.cursor-x {
     height: 100%;
     width: 1px;
 }
 
 .cursor-y {
-    background-color: #fff;
-    cursor: none;
-    position: absolute;
     height: 1px;
     width: 100%;
 }
